# py-gpsd2

./: README.md  README.rst  pyproject.toml  setup.py
gpsd/: __init__.py
