[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "py-gpsd2"
version = "0.1.0"
authors = [
  { name="Martijn Braam", email="" },
  { name="hatsunearu", email="me@hatsunearu.xyz"}
]
description = "Python 3 library for working with gpsd"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/hatsunearu/py-gpsd2"
"Bug Tracker" = "https://github.com/hatsunearu/py-gpsd2/issues"